# dotman

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/: cli.rs  error.rs  gather.rs  lib.rs  main.rs
