[package]
name = "dotman"
version = "0.1.0"
authors = ["Tibo Ulens"]
edition = "2021"
description = "Dotfile Manager"
readme = "README.md"
repository = "https://github.com/Tibo-Ulens/dotman"
license = "MIT"
publish = false

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 1

[dependencies]
