[package]
name = "dotman"
version = "0.1.0"
authors = ["Tibo Ulens"]
edition = "2021"
description = "DOTfile MANager"
readme = "README.md"
repository = "https://github.com/Tibo-Ulens/dotman"
license = "MIT"
publish = false

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 1

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.56"
clap = "3.1.8"
crossterm = "0.23.1"
serde = "1.0.136"
serde_derive = "1.0.136"
thiserror = "1.0.30"
toml = "0.5.8"
